[package]
name = "axum-messages"
version = "0.2.2"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "🛎️ One-time notification messages for Axum."
homepage = "https://github.com/maxcountryman/axum-messages"
keywords = ["axum", "flash", "message", "messages", "notification"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/maxcountryman/axum-messages"

[dependencies]
async-trait = "0.1.77"
axum-core = "0.4.3"
http = "1.0.0"
parking_lot = "0.12.1"
serde = { version = "1.0.195", features = ["derive"] }
tower = "0.4"
tower-sessions-core = "0.10.0"

[dev-dependencies]
axum = { version = "0.7.0", features = ["macros"] }
http-body-util = "0.1"
hyper = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tower = "0.4"
tower-sessions = "0.10.0"

[[example]]
name = "basic"
