[package]
name = "axum-messages"
version = "0.8.0"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
categories = ["asynchronous", "network-programming", "web-programming"]
description = "🛎️ One-time notification messages for Axum."
homepage = "https://github.com/maxcountryman/axum-messages"
keywords = ["axum", "flash", "message", "messages", "notification"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/maxcountryman/axum-messages"

[dependencies]
axum-core = "0.5.0"
http = "1.0.0"
parking_lot = "0.12.1"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-sessions-core = "0.14.0"
tracing = { version = "0.1.40", features = ["log"] }

[dev-dependencies]
axum = { version = "0.8.1", features = ["macros"] }
http-body-util = "0.1"
hyper = "1.0"
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tower = "0.5"
tower-sessions = "0.14.0"

[[example]]
name = "basic"
